xidlc/tests/snapshots/codegen_snapshot__ts-http__http_client_stream_ndjson.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_client_stream_ndjson.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_client_stream_ndjson";

import type * as ifaceTypes from "./http_client_stream_ndjson.iface";
import * as ifaceSchemas from "./http_client_stream_ndjson.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class HttpClientStreamServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async upload_chunk(stream: AsyncIterable<ifaceTypes.HttpClientStreamServiceUploadChunkRequest>): Promise<string> {
                let xidlPath = "/upload/chunks";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Content-Type", "application/x-ndjson");
            headers.set("Accept", "text/plain");
            const resp = await this.fetchImpl(url, { method: "POST", headers, body: ndjsonBody(stream, undefined) });
            if (!resp.ok) {
                throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
        
    }
    
    
}
===============
http_client_stream_ndjson.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpClientStreamServiceUploadChunkRequest {
        file_id: string;
            chunk: Array<number>;
        }

export {};
===============
http_client_stream_ndjson.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpClientStreamServiceUploadChunkRequestSchema = z.object({
        file_id: z.coerce.string(),
        chunk: z.array(z.coerce.number().int().nonnegative()),
    });
export type HttpClientStreamServiceUploadChunkRequest = z.infer<typeof HttpClientStreamServiceUploadChunkRequestSchema>;
===============
http_client_stream_ndjson.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_client_stream_ndjson";

import type * as ifaceTypes from "./http_client_stream_ndjson.iface";
import * as ifaceSchemas from "./http_client_stream_ndjson.iface.zod";
import { z } from "zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpClientStreamService {
    
        upload_chunk(stream: AsyncIterable<ifaceTypes.HttpClientStreamServiceUploadChunkRequest>): Awaitable<string>;
    
}

export const HttpClientStreamServiceOperations = {
    
        upload_chunk: defineOperation<HttpClientStreamService, "upload_chunk">({
            handler: "upload_chunk",
            method: "POST",
            path: "/upload/chunks",
            paths: ["/upload/chunks"],
            request: {
                kind: "stream",
                args: ["stream"],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "stream",
                    contentType: "application/x-ndjson",
                    fields: [{ wireName: "file_id", key: "file_id" }],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_client_stream_ndjson.ts
===============
export {};
