xidlc/tests/snapshots/codegen_snapshot__ts-http__http_client_stream_report.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_client_stream_report.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_client_stream_report";

import type * as ifaceTypes from "./http_client_stream_report.iface";
import * as ifaceSchemas from "./http_client_stream_report.iface.zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    
export class HttpClientStreamReportServiceClient {
    private readonly baseUrl: string;
    private readonly fetchImpl: FetchLike;
    private readonly defaultHeaders: Record<string, string>;
    private readonly auth?: ClientAuth;
    private readonly codecs: Record<string, HttpCodec>;

    constructor(baseUrl: string, options: ClientOptions = {}) {
        this.baseUrl = baseUrl;
        this.fetchImpl = resolveFetch(options.fetch);
        this.defaultHeaders = options.headers ?? {};
        this.auth = options.auth;
        this.codecs = options.codecs ?? {};
    }
    
        async upload_parts(stream: AsyncIterable<ifaceTypes.HttpClientStreamReportServiceUploadPartsRequest>): Promise<types.UploadSummary> {
            let path = "/uploads/parts";
            const query = new URLSearchParams();
            const headers = new Headers(this.defaultHeaders);
            const cookies: string[] = [];
            applyCookies(headers, cookies);
            applyClientAuth(path, query, headers, this.auth, []);
            const queryString = query.toString();
            if (queryString.length > 0) {
                path = `${path}?${queryString}`;
            }
            const url = joinUrl(this.baseUrl, path);
            headers.set("Content-Type", "application/x-ndjson");
        headers.set("Accept", "application/json");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: ndjsonBody(stream, undefined) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<types.UploadSummary>(resp, "application/json", this.codecs);
        
        
    }
    
    
}
===============
http_client_stream_report.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface UploadChunk {
        
            part_id: string;
                bytes: Array<number>;
            }

    

export interface UploadSummary {
        
            upload_id: string;
                accepted: number;
            }

export {};
===============
http_client_stream_report.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    import type * as types from "./http_client_stream_report";


    

export interface HttpClientStreamReportServiceUploadPartsRequest {
        chunk: types.UploadChunk;
        }

export {};
===============
http_client_stream_report.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    import * as models from "./http_client_stream_report.zod";
    export { models };


    
export const HttpClientStreamReportServiceUploadPartsRequestSchema = z.object({
        chunk: models.UploadChunkSchema,
    });
export type HttpClientStreamReportServiceUploadPartsRequest = z.infer<typeof HttpClientStreamReportServiceUploadPartsRequestSchema>;
===============
http_client_stream_report.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_client_stream_report";

import type * as ifaceTypes from "./http_client_stream_report.iface";
import * as ifaceSchemas from "./http_client_stream_report.iface.zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpClientStreamReportService {
    
        upload_parts(stream: AsyncIterable<ifaceTypes.HttpClientStreamReportServiceUploadPartsRequest>): Awaitable<types.UploadSummary>;
    
}

export const HttpClientStreamReportServiceOperations = {
    
        upload_parts: defineOperation<HttpClientStreamReportService, "upload_parts">({
            handler: "upload_parts",
            method: "POST",
            path: "/uploads/parts",
            paths: ["/uploads/parts"],
            request: {
                kind: "stream",
                args: ["stream"],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "stream",
                    contentType: "application/x-ndjson",
                    fields: [{ wireName: "chunk", key: "chunk" }],
                    schema: ifaceSchemas.models.UploadChunkSchema,
                
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_client_stream_report.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const UploadChunkSchema = z.object({
        
            part_id: z.coerce.string(),
        
            bytes: z.array(z.coerce.number().int().nonnegative())
        
    });

    
    export const UploadSummarySchema = z.object({
        
            upload_id: z.coerce.string(),
        
            accepted: z.coerce.number().int().nonnegative()
        
    });
