xidlc/tests/snapshots/codegen_snapshot__ts-http__http_edge_cases.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_edge_cases.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_edge_cases";

import type * as ifaceTypes from "./http_edge_cases.iface";
import * as ifaceSchemas from "./http_edge_cases.iface.zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    
export class HttpEdgeCasesServiceClient {
    private readonly baseUrl: string;
    private readonly fetchImpl: FetchLike;
    private readonly defaultHeaders: Record<string, string>;
    private readonly auth?: ClientAuth;
    private readonly codecs: Record<string, HttpCodec>;

    constructor(baseUrl: string, options: ClientOptions = {}) {
        this.baseUrl = baseUrl;
        this.fetchImpl = resolveFetch(options.fetch);
        this.defaultHeaders = options.headers ?? {};
        this.auth = options.auth;
        this.codecs = options.codecs ?? {};
    }
    
        async health(trace: string): Promise<void> {
            const parsed = ifaceSchemas.HttpEdgeCasesServiceHealthRequestSchema.parse({ "trace": trace });
            let path = "/v1/health";
            const query = new URLSearchParams();
            appendParam(query, "trace_id", trace, false, false);
            const headers = new Headers(this.defaultHeaders);
            const cookies: string[] = [];
            applyCookies(headers, cookies);
            applyClientAuth(path, query, headers, this.auth, []);
            const queryString = query.toString();
            if (queryString.length > 0) {
                path = `${path}?${queryString}`;
            }
            const url = joinUrl(this.baseUrl, path);
            headers.set("Accept", "");
        const resp = await this.fetchImpl(url, { method: "HEAD", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return;
        
    }
    
        async get_user(uid: number, locale: string): Promise<string> {
            const parsed = ifaceSchemas.HttpEdgeCasesServiceGetUserRequestSchema.parse({ "uid": uid, "locale": locale });
            let path = "/v1/users/{id}";
            path = path.replace("{" + "id" + "}", encodePathSegment(uid));
            const query = new URLSearchParams();
            appendParam(query, "lang", locale, false, false);
            const headers = new Headers(this.defaultHeaders);
            const cookies: string[] = [];
            applyCookies(headers, cookies);
            applyClientAuth(path, query, headers, this.auth, []);
            const queryString = query.toString();
            if (queryString.length > 0) {
                path = `${path}?${queryString}`;
            }
            const url = joinUrl(this.baseUrl, path);
            headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
        async dedup_user(id: number): Promise<string> {
            const parsed = ifaceSchemas.HttpEdgeCasesServiceDedupUserRequestSchema.parse({ "id": id });
            let path = "/v1/dedup/{id}";
            path = path.replace("{" + "id" + "}", encodePathSegment(id));
            const query = new URLSearchParams();
            const headers = new Headers(this.defaultHeaders);
            const cookies: string[] = [];
            applyCookies(headers, cookies);
            applyClientAuth(path, query, headers, this.auth, []);
            const queryString = query.toString();
            if (queryString.length > 0) {
                path = `${path}?${queryString}`;
            }
            const url = joinUrl(this.baseUrl, path);
            headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
        async get_item(order_id: number, item_id: number): Promise<string> {
            const parsed = ifaceSchemas.HttpEdgeCasesServiceGetItemRequestSchema.parse({ "order_id": order_id, "item_id": item_id });
            let path = "/orders/{order_id}/items/{item_id}";
            path = path.replace("{" + "order_id" + "}", encodePathSegment(order_id));
            path = path.replace("{" + "item_id" + "}", encodePathSegment(item_id));
            const query = new URLSearchParams();
            const headers = new Headers(this.defaultHeaders);
            const cookies: string[] = [];
            applyCookies(headers, cookies);
            applyClientAuth(path, query, headers, this.auth, []);
            const queryString = query.toString();
            if (queryString.length > 0) {
                path = `${path}?${queryString}`;
            }
            const url = joinUrl(this.baseUrl, path);
            headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
        async lookup(keyword: string, page_size: number): Promise<string> {
            const parsed = ifaceSchemas.HttpEdgeCasesServiceLookupRequestSchema.parse({ "keyword": keyword, "page_size": page_size });
            let path = "/lookup";
            const query = new URLSearchParams();
            appendParam(query, "keyword", keyword, false, false);
            appendParam(query, "limit", page_size, false, false);
            const headers = new Headers(this.defaultHeaders);
            const cookies: string[] = [];
            applyCookies(headers, cookies);
            applyClientAuth(path, query, headers, this.auth, []);
            const queryString = query.toString();
            if (queryString.length > 0) {
                path = `${path}?${queryString}`;
            }
            const url = joinUrl(this.baseUrl, path);
            headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "POST", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
    
}
===============
http_edge_cases.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



export {};
===============
http_edge_cases.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpEdgeCasesServiceHealthRequest {
        trace: string;
        }

    

export interface HttpEdgeCasesServiceGetUserRequest {
        uid: number;
            locale: string;
        }

    

export interface HttpEdgeCasesServiceDedupUserRequest {
        id: number;
        }

    

export interface HttpEdgeCasesServiceGetItemRequest {
        order_id: number;
            item_id: number;
        }

    

export interface HttpEdgeCasesServiceLookupRequest {
        keyword: string;
            page_size: number;
        }

export {};
===============
http_edge_cases.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpEdgeCasesServiceHealthRequestSchema = z.object({
        trace: z.coerce.string(),
    });
export type HttpEdgeCasesServiceHealthRequest = z.infer<typeof HttpEdgeCasesServiceHealthRequestSchema>;

    
export const HttpEdgeCasesServiceGetUserRequestSchema = z.object({
        uid: z.coerce.number().int().nonnegative(),
        locale: z.coerce.string(),
    });
export type HttpEdgeCasesServiceGetUserRequest = z.infer<typeof HttpEdgeCasesServiceGetUserRequestSchema>;

    
export const HttpEdgeCasesServiceDedupUserRequestSchema = z.object({
        id: z.coerce.number().int().nonnegative(),
    });
export type HttpEdgeCasesServiceDedupUserRequest = z.infer<typeof HttpEdgeCasesServiceDedupUserRequestSchema>;

    
export const HttpEdgeCasesServiceGetItemRequestSchema = z.object({
        order_id: z.coerce.number().int().nonnegative(),
        item_id: z.coerce.number().int().nonnegative(),
    });
export type HttpEdgeCasesServiceGetItemRequest = z.infer<typeof HttpEdgeCasesServiceGetItemRequestSchema>;

    
export const HttpEdgeCasesServiceLookupRequestSchema = z.object({
        keyword: z.coerce.string(),
        page_size: z.coerce.number().int().nonnegative(),
    });
export type HttpEdgeCasesServiceLookupRequest = z.infer<typeof HttpEdgeCasesServiceLookupRequestSchema>;
===============
http_edge_cases.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_edge_cases";

import type * as ifaceTypes from "./http_edge_cases.iface";
import * as ifaceSchemas from "./http_edge_cases.iface.zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpEdgeCasesService {
    
        health(trace: string): Awaitable<void>;
    
        get_user(uid: number, locale: string): Awaitable<string>;
    
        dedup_user(id: number): Awaitable<string>;
    
        get_item(order_id: number, item_id: number): Awaitable<string>;
    
        lookup(keyword: string, page_size: number): Awaitable<string>;
    
}

export const HttpEdgeCasesServiceOperations = {
    
        health: defineOperation<HttpEdgeCasesService, "health">({
            handler: "health",
            method: "HEAD",
            path: "/v1/health",
            paths: ["/v1/health"],
            request: {
                kind: "object",
                args: ["trace"],
                schema: ifaceSchemas.HttpEdgeCasesServiceHealthRequestSchema,
                path: [],
                query: [{ wireName: "trace_id", key: "trace", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "",
            bodyMode: "none",
            bodyFields: [],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        get_user: defineOperation<HttpEdgeCasesService, "get_user">({
            handler: "get_user",
            method: "GET",
            path: "/v1/users/{id}",
            paths: ["/v1/users/{id}", "/v2/users/{id}"],
            request: {
                kind: "object",
                args: ["uid", "locale"],
                schema: ifaceSchemas.HttpEdgeCasesServiceGetUserRequestSchema,
                path: [{ parameter: "id", wireName: "id", key: "uid", multi: false, catchAll: false }],
                query: [{ wireName: "lang", key: "locale", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        dedup_user: defineOperation<HttpEdgeCasesService, "dedup_user">({
            handler: "dedup_user",
            method: "GET",
            path: "/v1/dedup/{id}",
            paths: ["/v1/dedup/{id}"],
            request: {
                kind: "object",
                args: ["id"],
                schema: ifaceSchemas.HttpEdgeCasesServiceDedupUserRequestSchema,
                path: [{ parameter: "id", wireName: "id", key: "id", multi: false, catchAll: false }],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        get_item: defineOperation<HttpEdgeCasesService, "get_item">({
            handler: "get_item",
            method: "GET",
            path: "/orders/{order_id}/items/{item_id}",
            paths: ["/orders/{order_id}/items/{item_id}"],
            request: {
                kind: "object",
                args: ["order_id", "item_id"],
                schema: ifaceSchemas.HttpEdgeCasesServiceGetItemRequestSchema,
                path: [{ parameter: "order_id", wireName: "order_id", key: "order_id", multi: false, catchAll: false }, { parameter: "item_id", wireName: "item_id", key: "item_id", multi: false, catchAll: false }],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        lookup: defineOperation<HttpEdgeCasesService, "lookup">({
            handler: "lookup",
            method: "POST",
            path: "/lookup",
            paths: ["/lookup"],
            request: {
                kind: "object",
                args: ["keyword", "page_size"],
                schema: ifaceSchemas.HttpEdgeCasesServiceLookupRequestSchema,
                path: [],
                query: [{ wireName: "keyword", key: "keyword", multi: false }, { wireName: "limit", key: "page_size", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_edge_cases.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";
